--- a/index.html
+++ b/index.html
@@ -2,26 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interactive World Map with Hover</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interactive World Map</title>
   <style>
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
+      background: url('mapbg.png') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow: hidden;
-      background: #000;
-      font-family: sans-serif;
-      touch-action: none;
+      user-select: none;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
 
     #viewport {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-}
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      position: relative;
+      touch-action: none;
+      cursor: grab;
+    }
 
-    
+    #viewport:active {
+      cursor: grabbing;
+    }
 
     #map-container {
       position: absolute;
@@ -34,9 +42,10 @@
     .foreground {
       width: 1920px;
       height: 1080px;
-      background: url('WORLD MAP.png') no-repeat center center;
+      background: url('worldmap.png') no-repeat center center;
       background-size: contain;
       position: relative;
+      user-select: none;
     }
 
     .location-container {
@@ -44,6 +53,7 @@
       text-align: center;
       z-index: 10;
       pointer-events: auto;
+      user-select: none;
     }
 
     .location-button {
@@ -53,7 +63,14 @@
       border-radius: 50%;
       cursor: pointer;
       position: relative;
-      overflow: visible;
+      outline: none;
+      border: 2px solid #66bb6a;
+      box-shadow: 0 0 8px rgba(102, 187, 106, 0.6);
+    }
+
+    .location-button:focus-visible {
+      box-shadow: 0 0 12px 3px #80e27e;
+      border-color: #80e27e;
     }
 
     .location-button::after,
@@ -61,7 +78,7 @@
       content: "";
       position: absolute;
       top: 50%;
-      left: 75%;
+      left: 50%;
       width: 18px;
       height: 18px;
       background: lightgreen;
@@ -96,7 +113,7 @@
     .label {
       display: none;
       position: absolute;
-      top: 24px;
+      top: 30px;
       left: 50%;
       transform: translateX(-50%);
       white-space: nowrap;
@@ -105,24 +122,136 @@
       padding: 4px 8px;
       font-size: 12px;
       border-radius: 4px;
+      pointer-events: none;
+      user-select: none;
+      font-weight: 600;
+      box-shadow: 0 0 8px rgba(0,0,0,0.7);
     }
 
-    .location-container:hover .label {
+    .label img {
+      width: 20px;
+      height: auto;
+      vertical-align: middle;
+      margin-right: 4px;
+    }
+
+    .location-container:hover .label,
+    .location-button:focus-visible + .label {
       display: block;
     }
   </style>
 </head>
 <body>
-  <div id="viewport">
-        <div id="map-container">
+  <div id="viewport" role="region" aria-label="Interactive World Map">
+    <div id="map-container">
       <div class="foreground">
-        <div class="location-container" style="top: 250px; left: 540px;">
-          <div class="location-button"></div>
-          <div class="label">USA</div>
+        <div class="location-container" style="top: 450px; left: 350px;">
+          <div class="location-button" role="button" aria-label="USA" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #b22234 60%, #3c3b6e 40%);margin-right:6px;border:1px solid #fff'></span>
+            USA
+          </div>
         </div>
-        <div class="location-container" style="top: 540px; left: 920px;">
-          <div class="location-button"></div>
-          <div class="label">India</div>
+        <div class="location-container" style="top: 570px; left: 1260px;">
+          <div class="location-button" role="button" aria-label="India" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #ff9933 33%, #ffffff 33%, #ffffff 66%, #138808 66%);margin-right:6px;border:1px solid #fff'></span>
+            Head Q at Kerala
+          </div>
+        </div>
+        <div class="location-container" style="top: 400px; left: 1580px;">
+          <div class="location-button" role="button" aria-label="Japan" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:white;margin-right:6px;border:1px solid #fff'>
+              <span style='display:block;width:6px;height:6px;background:#bc002d;border-radius:50%;margin:auto;margin-top:1px'></span>
+            </span>
+            Japan
+          </div>
+        </div>
+        <div class="location-container" style="top: 750px; left: 1550px;">
+          <div class="location-button" role="button" aria-label="Australia" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:#00008B;margin-right:6px;border:1px solid #fff'></span>
+            Australia
+          </div>
+        </div>
+        <div class="location-container" style="top: 600px; left: 1250px;">
+          <div class="location-button" role="button" aria-label="Maldives" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:#d21034;margin-right:6px;border:1px solid #fff'>
+              <span style='display:block;width:8px;height:6px;background:#007e3a;margin:auto;margin-top:1px'></span>
+            </span>
+            Maldives
+          </div>
+        </div>
+        <div class="location-container" style="top: 480px; left: 1120px;">
+          <div class="location-button" role="button" aria-label="Kuwait" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #007a3d 33%, #ffffff 33%, #ffffff 66%, #ce1126 66%);margin-right:6px;border-left:6px solid black;border:1px solid #fff'></span>
+            Kuwait
+          </div>
+        </div>
+        <div class="location-container" style="top: 500px; left: 1140px;">
+          <div class="location-button" role="button" aria-label="Qatar" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #8d1b3d 50%, #ffffff 50%);margin-right:6px;border:1px solid #fff'></span>
+            Qatar
+          </div>
+        </div>
+        <div class="location-container" style="top: 350px; left: 380px;">
+          <div class="location-button" role="button" aria-label="Canada" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #ff0000 33%, white 33%, white 66%, #ff0000 66%);margin-right:6px;border:1px solid #fff'></span>
+            Canada
+          </div>
+        </div>
+
+        <!-- Nepal location added -->
+        <div class="location-container" style="top: 480px; left: 1300px;">
+          <div class="location-button" role="button" aria-label="Nepal" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style="display:inline-block; width: 12px; height: 16px; background: #DC241F; border-left: 6px solid #003893; position: relative; margin-right: 6px; border-radius: 0 3px 3px 0; box-sizing: content-box;">
+              <svg viewBox="0 0 60 96" xmlns="http://www.w3.org/2000/svg" style="position:absolute;left:2px;top:4px; width: 6px; height: 8px;" fill="white" >
+                <polygon points="30 4 20 26 30 20 40 26" />
+                <circle cx="30" cy="40" r="6" />
+                <polygon points="30 60 20 72 30 74 40 72" />
+              </svg>
+            </span>
+            Nepal
+          </div>
+        </div>
+
+        <!-- Singapore location added -->
+        <div class="location-container" style="top: 600px; left: 1390px;">
+          <div class="location-button" role="button" aria-label="Singapore" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style="display:inline-block; width: 12px; height: 8px; background: linear-gradient(to bottom, #ed2939 50%, white 50%); position: relative; margin-right: 6px; border: 1px solid #fff; box-sizing: border-box;">
+              <!-- crescent -->
+              <span style="position: absolute; top: 1px; left: 3px; width: 4px; height: 6px; background: white; border-radius: 50% / 100%; box-shadow: 1px 0 0 red inset;"></span>
+              <!-- stars -->
+              <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" style="position: absolute; top: 1px; left: 7px; width: 4px; height: 4px;" fill="white">
+                <polygon points="10,1 12,7 18,7 13,11 15,17 10,13 5,17 7,11 2,7 8,7"/>
+              </svg>
+            </span>
+            Singapore
+          </div>
+        </div>
+
+        <div class="location-container" style="top: 450px; left: 1520px;">
+          <div class="location-button" role="button" aria-label="Korea" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:white;margin-right:6px;border:1px solid #fff'>
+              <span style='display:block;width:6px;height:6px;background:#c60c30;border-radius:50%;margin:auto;margin-top:1px'></span>
+            </span>
+            Korea
+          </div>
+        </div>
+        <div class="location-container" style="top: 500px; left: 1170px;">
+          <div class="location-button" role="button" aria-label="UAE" tabindex="0"></div>
+          <div class="label" aria-hidden="true">
+            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #ff0000 33%, white 33%, white 66%, #00732f 66%);margin-right:6px;border-left:4px solid black;border:1px solid #fff'></span>
+            UAE
+          </div>
         </div>
       </div>
     </div>
@@ -131,7 +260,6 @@
   <script>
     const viewport = document.getElementById("viewport");
     const mapContainer = document.getElementById("map-container");
-    const cursorMarker = document.getElementById("cursor-marker");
 
     let scale = 1.5;
     let targetScale = scale;
@@ -149,9 +277,9 @@
     }
 
     function animateTransform() {
-      scale += (targetScale - scale) * 0.03;
-      offsetX += (targetOffsetX - offsetX) * 0.03;
-      offsetY += (targetOffsetY - offsetY) * 0.015;
+      scale += (targetScale - scale) * 0.08;
+      offsetX += (targetOffsetX - offsetX) * 0.08;
+      offsetY += (targetOffsetY - offsetY) * 0.08;
       mapContainer.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${scale})`;
       requestAnimationFrame(animateTransform);
     }
@@ -165,17 +293,21 @@
       const ratioY = cursorY / window.innerHeight;
       targetOffsetX = clamp(-maxOffsetX * ratioX, -maxOffsetX, 0);
       targetOffsetY = clamp(-maxOffsetY * ratioY, -maxOffsetY, 0);
-          }
+    }
+
+    let isTouching = false;
 
     viewport.addEventListener("mousemove", (e) => {
-      cursorX = e.clientX;
-      cursorY = e.clientY;
-      updateTargetOffsetsFromCursor();
+      if (!isTouching) {
+        cursorX = e.clientX;
+        cursorY = e.clientY;
+        updateTargetOffsetsFromCursor();
+      }
     });
 
     viewport.addEventListener("wheel", (e) => {
       e.preventDefault();
-      const delta = e.deltaY > 0 ? -0.05 : 0.05;
+      const delta = e.deltaY > 0 ? -0.01 : 0.01; // Reduced zoom speed
       targetScale = clamp(targetScale + delta, 1, 2.5);
       updateTargetOffsetsFromCursor();
     }, { passive: false });
@@ -197,6 +329,7 @@
     }
 
     viewport.addEventListener("touchstart", (e) => {
+      isTouching = true;
       if (e.touches.length === 2) {
         lastTouchDistance = getDistance(e.touches);
         lastTouchCenter = getCenter(e.touches);
@@ -212,7 +345,7 @@
         const newDistance = getDistance(e.touches);
         const center = getCenter(e.touches);
         const distanceChange = newDistance - lastTouchDistance;
-        targetScale = clamp(targetScale + distanceChange * 0.001, 1, 2.5);
+        targetScale = clamp(targetScale + distanceChange * 0.0005, 1, 2.5); // Slower pinch zoom
         cursorX = center.x;
         cursorY = center.y;
         updateTargetOffsetsFromCursor();
@@ -221,8 +354,13 @@
       }
     }, { passive: false });
 
+    viewport.addEventListener("touchend", () => {
+      isTouching = false;
+    });
+
     updateTargetOffsetsFromCursor();
     animateTransform();
   </script>
 </body>
 </html>
+
