--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             USA
           </div>
         </div>
-        <div class="location-container" style="top: 570px; left: 1260px;">
+        <div class="location-container" style="top: 490px; left: 1270px;">
           <div class="location-button" role="button" aria-label="India" tabindex="0"></div>
           <div class="label" aria-hidden="true">
             <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #ff9933 33%, #ffffff 33%, #ffffff 66%, #138808 66%);margin-right:6px;border:1px solid #fff'></span>
-            Head Q at Kerala
+            INDIA
           </div>
         </div>
         <div class="location-container" style="top: 400px; left: 1580px;">
