--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Interactive World Map</title>
   <style>
     html, body {
@@ -57,57 +57,55 @@
     }
 
     .location-button {
-      width: 18px;
-      height: 18px;
+      position: relative;
+      width: 14px;
+      height: 14px;
       background: lightgreen;
       border-radius: 50%;
       cursor: pointer;
-      position: relative;
       outline: none;
       border: 2px solid #66bb6a;
       box-shadow: 0 0 8px rgba(102, 187, 106, 0.6);
+      transition: background 0.3s, transform 0.3s;
+      /* For ripple effect, the animation is on a pseudo-element */
+      z-index: 1;
+    }
+
+    /* Ripple effect */
+    .location-button::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      border: 2px solid #66bb6a;
+      opacity: 0.6;
+      animation: ripple 2.5s linear infinite;
+      z-index: -1;
+    }
+
+    @keyframes ripple {
+      0% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.6;
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(2.6);
+        opacity: 0;
+      }
+    }
+
+    .location-button:hover {
+      background: #80e27e;
+      transform: scale(1.1);
     }
 
     .location-button:focus-visible {
       box-shadow: 0 0 12px 3px #80e27e;
       border-color: #80e27e;
-    }
-
-    .location-button::after,
-    .location-button::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 18px;
-      height: 18px;
-      background: lightgreen;
-      border-radius: 50%;
-      opacity: 0.5;
-      transform: translate(-50%, -50%) scale(0.5);
-      z-index: -1;
-    }
-
-    .location-button::after {
-      animation: ripple 2s infinite ease-out;
-    }
-
-    .location-button::before {
-      animation: ripple 2s 1s infinite ease-out;
-    }
-
-    @keyframes ripple {
-      0% {
-        transform: translate(-50%, -50%) scale(0.5);
-        opacity: 0.5;
-      }
-      50% {
-        opacity: 0.2;
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(3);
-        opacity: 0;
-      }
     }
 
     .label {
@@ -126,18 +124,27 @@
       user-select: none;
       font-weight: 600;
       box-shadow: 0 0 8px rgba(0,0,0,0.7);
-    }
-
-    .label img {
-      width: 20px;
-      height: auto;
-      vertical-align: middle;
-      margin-right: 4px;
+      z-index: 10;
     }
 
     .location-container:hover .label,
     .location-button:focus-visible + .label {
       display: block;
+    }
+
+    /* Media Queries for Mobile Responsiveness */
+    @media (max-width: 768px) {
+      .location-button {
+        width: 12px;
+        height: 12px;
+      }
+      .location-button::before {
+        width: 12px;
+        height: 12px;
+      }
+      .label {
+        font-size: 10px;
+      }
     }
   </style>
 </head>
@@ -147,111 +154,51 @@
       <div class="foreground">
         <div class="location-container" style="top: 450px; left: 350px;">
           <div class="location-button" role="button" aria-label="USA" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #b22234 60%, #3c3b6e 40%);margin-right:6px;border:1px solid #fff'></span>
-            USA
-          </div>
+          <div class="label" aria-hidden="true">USA</div>
         </div>
         <div class="location-container" style="top: 490px; left: 1270px;">
           <div class="location-button" role="button" aria-label="India" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #ff9933 33%, #ffffff 33%, #ffffff 66%, #138808 66%);margin-right:6px;border:1px solid #fff'></span>
-            INDIA
-          </div>
+          <div class="label" aria-hidden="true">INDIA</div>
         </div>
         <div class="location-container" style="top: 400px; left: 1580px;">
           <div class="location-button" role="button" aria-label="Japan" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:white;margin-right:6px;border:1px solid #fff'>
-              <span style='display:block;width:6px;height:6px;background:#bc002d;border-radius:50%;margin:auto;margin-top:1px'></span>
-            </span>
-            Japan
-          </div>
+          <div class="label" aria-hidden="true">Japan</div>
         </div>
         <div class="location-container" style="top: 750px; left: 1550px;">
           <div class="location-button" role="button" aria-label="Australia" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:#00008B;margin-right:6px;border:1px solid #fff'></span>
-            Australia
-          </div>
+          <div class="label" aria-hidden="true">Australia</div>
         </div>
         <div class="location-container" style="top: 600px; left: 1250px;">
           <div class="location-button" role="button" aria-label="Maldives" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:#d21034;margin-right:6px;border:1px solid #fff'>
-              <span style='display:block;width:8px;height:6px;background:#007e3a;margin:auto;margin-top:1px'></span>
-            </span>
-            Maldives
-          </div>
+          <div class="label" aria-hidden="true">Maldives</div>
         </div>
         <div class="location-container" style="top: 480px; left: 1120px;">
           <div class="location-button" role="button" aria-label="Kuwait" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to bottom, #007a3d 33%, #ffffff 33%, #ffffff 66%, #ce1126 66%);margin-right:6px;border-left:6px solid black;border:1px solid #fff'></span>
-            Kuwait
-          </div>
+          <div class="label" aria-hidden="true">Kuwait</div>
         </div>
         <div class="location-container" style="top: 500px; left: 1140px;">
           <div class="location-button" role="button" aria-label="Qatar" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #8d1b3d 50%, #ffffff 50%);margin-right:6px;border:1px solid #fff'></span>
-            Qatar
-          </div>
+          <div class="label" aria-hidden="true">Qatar</div>
         </div>
         <div class="location-container" style="top: 350px; left: 380px;">
           <div class="location-button" role="button" aria-label="Canada" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #ff0000 33%, white 33%, white 66%, #ff0000 66%);margin-right:6px;border:1px solid #fff'></span>
-            Canada
-          </div>
+          <div class="label" aria-hidden="true">Canada</div>
         </div>
-
-        <!-- Nepal location added -->
         <div class="location-container" style="top: 480px; left: 1300px;">
           <div class="location-button" role="button" aria-label="Nepal" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style="display:inline-block; width: 12px; height: 16px; background: #DC241F; border-left: 6px solid #003893; position: relative; margin-right: 6px; border-radius: 0 3px 3px 0; box-sizing: content-box;">
-              <svg viewBox="0 0 60 96" xmlns="http://www.w3.org/2000/svg" style="position:absolute;left:2px;top:4px; width: 6px; height: 8px;" fill="white" >
-                <polygon points="30 4 20 26 30 20 40 26" />
-                <circle cx="30" cy="40" r="6" />
-                <polygon points="30 60 20 72 30 74 40 72" />
-              </svg>
-            </span>
-            Nepal
-          </div>
+          <div class="label" aria-hidden="true">Nepal</div>
         </div>
-
-        <!-- Singapore location added -->
         <div class="location-container" style="top: 600px; left: 1390px;">
           <div class="location-button" role="button" aria-label="Singapore" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style="display:inline-block; width: 12px; height: 8px; background: linear-gradient(to bottom, #ed2939 50%, white 50%); position: relative; margin-right: 6px; border: 1px solid #fff; box-sizing: border-box;">
-              <!-- crescent -->
-              <span style="position: absolute; top: 1px; left: 3px; width: 4px; height: 6px; background: white; border-radius: 50% / 100%; box-shadow: 1px 0 0 red inset;"></span>
-              <!-- stars -->
-              <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" style="position: absolute; top: 1px; left: 7px; width: 4px; height: 4px;" fill="white">
-                <polygon points="10,1 12,7 18,7 13,11 15,17 10,13 5,17 7,11 2,7 8,7"/>
-              </svg>
-            </span>
-            Singapore
-          </div>
+          <div class="label" aria-hidden="true">Singapore</div>
         </div>
-
         <div class="location-container" style="top: 450px; left: 1520px;">
           <div class="location-button" role="button" aria-label="Korea" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:white;margin-right:6px;border:1px solid #fff'>
-              <span style='display:block;width:6px;height:6px;background:#c60c30;border-radius:50%;margin:auto;margin-top:1px'></span>
-            </span>
-            Korea
-          </div>
+          <div class="label" aria-hidden="true">Korea</div>
         </div>
         <div class="location-container" style="top: 500px; left: 1170px;">
           <div class="location-button" role="button" aria-label="UAE" tabindex="0"></div>
-          <div class="label" aria-hidden="true">
-            <span style='display:inline-block;width:12px;height:8px;background:linear-gradient(to right, #ff0000 33%, white 33%, white 66%, #00732f 66%);margin-right:6px;border-left:4px solid black;border:1px solid #fff'></span>
-            UAE
-          </div>
+          <div class="label" aria-hidden="true">UAE</div>
         </div>
       </div>
     </div>
@@ -307,7 +254,7 @@
 
     viewport.addEventListener("wheel", (e) => {
       e.preventDefault();
-      const delta = e.deltaY > 0 ? -0.01 : 0.01; // Reduced zoom speed
+      const delta = e.deltaY > 0 ? -0.01 : 0.01;
       targetScale = clamp(targetScale + delta, 1, 2.5);
       updateTargetOffsetsFromCursor();
     }, { passive: false });
@@ -345,7 +292,7 @@
         const newDistance = getDistance(e.touches);
         const center = getCenter(e.touches);
         const distanceChange = newDistance - lastTouchDistance;
-        targetScale = clamp(targetScale + distanceChange * 0.0005, 1, 2.5); // Slower pinch zoom
+        targetScale = clamp(targetScale + distanceChange * 0.0005, 1, 2.5);
         cursorX = center.x;
         cursorY = center.y;
         updateTargetOffsetsFromCursor();
