--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
     const mapWidth = 1920;
     const mapHeight = 1080;
 
-    // Initial scale and focus on India
-    let scale = 0.6;
+    let scale = 0.5;
     let targetScale = scale;
     const indiaX = 1270;
     const indiaY = 490;
@@ -151,11 +150,9 @@
     }
 
     function animate() {
-      // Smooth interpolation (slower for smoother)
       scale += (targetScale - scale) * 0.05;
       offsetX += (targetOffsetX - offsetX) * 0.05;
       offsetY += (targetOffsetY - offsetY) * 0.05;
-
       mapContainer.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${scale})`;
       requestAnimationFrame(animate);
     }
@@ -163,12 +160,10 @@
     function zoomAtPoint(x, y, zoomDelta) {
       const prevScale = targetScale;
       targetScale = clamp(targetScale + zoomDelta, 0.2, 3);
-
       const zoomFactor = targetScale / prevScale;
       const rect = viewport.getBoundingClientRect();
       const offsetXRel = x - rect.left - offsetX;
       const offsetYRel = y - rect.top - offsetY;
-
       targetOffsetX -= offsetXRel * (zoomFactor - 1);
       targetOffsetY -= offsetYRel * (zoomFactor - 1);
     }
@@ -202,7 +197,8 @@
     viewport.addEventListener("mouseup", () => isDragging = false);
     viewport.addEventListener("mouseleave", () => isDragging = false);
 
-    // Touch zoom
+    let isTouchDragging = false;
+    let touchStartX = null, touchStartY = null;
     let lastTouchDist = null;
 
     function getTouchDistance(e) {
@@ -212,20 +208,43 @@
     }
 
     viewport.addEventListener("touchstart", (e) => {
-      if (e.touches.length === 2) {
+      if (e.touches.length === 1) {
+        isTouchDragging = true;
+        touchStartX = e.touches[0].clientX;
+        touchStartY = e.touches[0].clientY;
+      } else if (e.touches.length === 2) {
         lastTouchDist = getTouchDistance(e);
+        isTouchDragging = false;
       }
-    });
+    }, { passive: false });
 
     viewport.addEventListener("touchmove", (e) => {
-      if (e.touches.length === 2) {
+      if (e.touches.length === 1 && isTouchDragging) {
+        const dx = e.touches[0].clientX - touchStartX;
+        const dy = e.touches[0].clientY - touchStartY;
+        targetOffsetX += dx;
+        targetOffsetY += dy;
+        touchStartX = e.touches[0].clientX;
+        touchStartY = e.touches[0].clientY;
+      } else if (e.touches.length === 2) {
         const newDist = getTouchDistance(e);
         const delta = (newDist - lastTouchDist) * 0.001;
         const centerX = (e.touches[0].clientX + e.touches[1].clientX) / 2;
         const centerY = (e.touches[0].clientY + e.touches[1].clientY) / 2;
         zoomAtPoint(centerX, centerY, delta);
         lastTouchDist = newDist;
-        e.preventDefault();
+      }
+      e.preventDefault();
+    }, { passive: false });
+
+    viewport.addEventListener("touchend", (e) => {
+      if (e.touches.length < 2) {
+        lastTouchDist = null;
+      }
+      if (e.touches.length === 0) {
+        isTouchDragging = false;
+        touchStartX = null;
+        touchStartY = null;
       }
     }, { passive: false });
 
